# platform.core.uifw.e-mod-tizen-wl-textinput

./: AUTHORS  COPYING  autogen.sh  configure.ac
packaging/: e-mod-tizen-wl-textinput.spec
protocol/: text.xml
src/: Makefile.am  e_mod_input_panel.c  e_mod_main.c  e_mod_main.h  wti_log.c  wti_log.h
